--- a/style.css
+++ b/style.css
@@ -118,12 +118,15 @@ body {
 .more-info-section .left-section {
     height: 500px;
     width: 50vw;
+    /* background-color: #CAD5E2; */
     /* background-color: #ae1ae8; */
     background-color: #242B2E;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
+    padding: 10px 0 0 0;
+    border-right: 2px solid #ffffff;
 }
 
 .more-info-section .left-section h1 {
@@ -135,7 +138,7 @@ body {
 }
 
 .car-details {
-    margin-top: 28px;
+    margin: 28px 0 0 0;
     border: 3px solid #ffffff;
     padding: 30px;
 }
@@ -156,6 +159,14 @@ body {
     /* gap: 58px; */
 }
 
+.car-details .picup-date-details input {
+    width: 131px;
+}
+
+.car-details .drop-off-date-details input {
+    width: 131px;
+}
+
 .car-details .drop-off-date-details{
     gap: 56px;
     /* gap: 32px; */
@@ -163,38 +174,83 @@ body {
 }
 
 .car-details .purpose-of-rental-details{
-    gap: 19px;
+    gap: 16px;
     margin-top: 20px;
+}
+
+.rental-options {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* background-color: #e34510; */
+    background-color: #aeaeae;
+    margin-top: 10px;
+    padding: 5px 8px;
+    border-radius: 6px;
+    border: 2px solid #000000;
+    width: 124px;
+    
+    /* align-items: center; */
+}
+
+.rental-options .first-option, .second-option {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.rental-options .first-option label {
+    /* color: #0af02c; */
+    /* color: #E03B8B; */
+    color: #000000;
+    font-weight: 700;
+    font-size: 17px;
+}
+
+.rental-options .second-option label {
+    /* color: #0af02c; */
+    /* color: #E03B8B; */
+    color: #000000;
+    font-weight: 700;
+    font-size: 17px;
 }
 
 .car-details label {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
     font-weight: 500;
-    color: #E03B8B;
+    /* color: #E03B8B; */
+    color: #0af02c;
 }
 
 .car-details select,input {
     padding: 5px;
     border-radius: 6px;
     border: 2px solid #000000;
-    background-color: #758283;
-
+    background-color: #aeaeae;
+    color: #000000;
+    font-weight: 700;
 }
 
+.car-details select option {
+    font-weight: 700;
+}
 
 .car-details .search-button {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    margin-top: 25px;
 }
 
 .search-button button {
-    margin-top: 25px;
     padding: 5px 12px;
-    font-size: 15px;
+    font-size: 18px;
     border: 4px solid #20b2aa;
     border-radius: 5px;
+    text-align: center;
+    font-weight: 900;
 }
 
 .more-info-section .right-section {
@@ -204,8 +260,10 @@ body {
     background-color: #242B2E;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
+    padding: 10px 0 0 0;
+    
 }
 
 .more-info-section .right-section h1 {
@@ -235,3 +293,96 @@ body {
     border-radius: 40px;
     background-color: #0af02c;
 }
+
+/* @media screen and (max-width: 975px) and (min-width: 817px) { */
+@media screen and (max-width: 1197px) {
+    body{
+        background: #000;
+    }
+
+    
+}
+
+@media screen and (max-width: 1135px) {
+    .more-info-section .left-section h1 {
+        margin: 0 10px;
+        padding: 0 8px;
+        background-color: #1adc12;
+        color: #fc0000;
+        font-size: 3.5rem;
+        font-weight: 700;
+    }
+
+    .nav-bar-container {
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+
+    .car-details {
+        border: none;
+    }
+
+    .nav-bar-container {
+        height: 100px;
+    }
+    
+}
+
+@media screen and (max-width: 975px) {
+    body{
+        background: #000;
+    }
+
+    .nav-bar-container {
+        height: 140px;
+    }
+
+    .more-info-section {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .more-info-section .left-section {
+        height: auto;
+        width: 100%;
+        margin: 0 10px 0 10px;
+        border-right:none ;
+    }
+
+    .more-info-section .left-section h1 {
+        font-size: 3.2rem;
+        margin: 0 10px;
+        padding: 0 5px;
+        background-color: #1adc12;
+        color: #fc0000;
+        font-weight: 700;
+    }
+
+    .more-info-section .car-details {
+        border: none;
+    }
+
+    .more-info-section .right-section {
+        height: auto;
+        width: 100%;
+        padding-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 890px) {
+    .nav-bar-container {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+}
+
+@media screen and (max-width: 685px) {
+    .nav-bar-container .nav-menu-items nav li {
+        font-size: 1.5rem; 
+    }
+}
+
+
