--- a/style.css
+++ b/style.css
@@ -387,8 +387,13 @@ body {
     }
 
     .nav-bar-container .nav-logo img {
-        margin-left: 0;
+        margin-left: 10px;
     }
+    .nav-bar-container .nav-menu-items nav {
+        margin-left: 10px;
+    }
+
+    
 }
 
 @media screen and (max-width: 685px) {
@@ -396,19 +401,113 @@ body {
         font-size: 1.5rem; 
     }
 
+    .nav-bar-container .nav-menu-items nav {
+        margin-left: 10px;
+    }
+
     .nav-bar-container .nav-logo img {
-        margin-left: 0;
+        margin-left: 10px;
         width: 10vw;
+    }
+
+    .nav-bar-container {
+        height: 100px;
     }
 }
 
-@media screen and (max-width: 585px) {
+/* @media screen and (max-width: 585px) { */
+@media screen and (max-width: 596px) {
     .nav-bar-container .nav-menu-items nav li {
         font-size: 1.3rem; 
     }
 
     .nav-bar-container .nav-logo img {
-        margin-left: 0;
+        margin-left: 10px;
+        width: 15vw;
+    }
+
+    .nav-bar-container .nav-menu-items nav {
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 537px) {
+    .nav-bar-container .nav-menu-items {
+        display: none;
+    }
+
+    .nav-bar-container .nav-logo img {
+        width: 82px;
+    }
+
+    .nav-bar-container {
+        height: 70px;
+    }
+}
+
+@media screen and (max-width: 482px) {
+    .banner-section h1 {
+        font-size: 16px;
+    }
+
+    .more-info-section .left-section h1 {
+        font-size: 18px;
+    }
+
+    .car-details {
+        margin: 20px 0 0 0;
+        padding: 0;
+    }
+    .car-details label {
+        font-size: 12px;
+        margin-left: 3px;
+    }
+
+    .car-details .location-details {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
+    }
+
+    .car-details .picup-date-details {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
+    }
+    .car-details .drop-off-date-details {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
+    }
+    .car-details .purpose-of-rental-details {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
+    }
+
+    .car-details select {
+        width: 164px;
+    }
+
+    .car-details input[type=date] {
+        width: 150px;
+    }
+
+    .rental-options {
+        width: 144px;
+    }
+
+    .car-details .search-button {
+        margin-bottom: 25px;
+    }
+
+    .more-info-section .right-section h1 {
+        font-size: 18px;
+        text-decoration: underline red;
+    }
+
+    .more-info-section .right-section .popular-destinations span {
+        font-size: 15px;
     }
 }
 
