--- a/style.css
+++ b/style.css
@@ -74,6 +74,11 @@ body {
     color: #ffffff;
 }
 
+.nav-menu-items nav li a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
 .nav-menu-items nav li:nth-child(4){
     margin-right: 0;
 }
