--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Fira+Sans:wght@400;600&family=Montserrat:ital,wght@0,400;0,700;1,800&family=Poppins:wght@400;500;700;900&family=Righteous&family=Roboto:ital,wght@0,500;0,700;0,900;1,400;1,900&family=Source+Code+Pro:wght@300;600;700&display=swap');
 
+/* --------------------------------------- */
+/* -------------- CSS Reset -------------- */
+/* --------------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
@@ -15,12 +19,20 @@ body {
     background-color: #b6bdbd;
 }
 
+/* ---------------------------------------------------- */
+/* -------------- Main Conatiner Styling -------------- */
+/* ---------------------------------------------------- */
+
 .main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 3vw 0 3vw;
 }
+
+/* ---------------------------------------------------------------- */
+/* -------------- NavBar Section Styling Starts Here -------------- */
+/* ---------------------------------------------------------------- */
 
 .nav-menu-toggler {
     display: none;
@@ -96,6 +108,15 @@ body {
     padding: 6px 12px;
 } */
 
+/* -------------------------------------------------------------- */
+/* -------------- NavBar Section Styling Ends Here -------------- */
+/* -------------------------------------------------------------- */
+
+
+
+/* ---------------------------------------------------------------- */
+/* -------------- Banner Section Styling Starts Here -------------- */
+/* ---------------------------------------------------------------- */
 .banner-section {
     height: auto;
     width: 100%;
@@ -122,6 +143,14 @@ body {
     max-width: 100%;
 }
 
+/* -------------------------------------------------------------- */
+/* -------------- Banner Section Styling Ends Here -------------- */
+/* -------------------------------------------------------------- */
+
+
+/* ------------------------------------------------------------------- */
+/* -------------- More Info Section Styling Starts Here -------------- */
+/* ------------------------------------------------------------------- */
 .more-info-section {
     height: 500px;
     width: 100%;
@@ -131,6 +160,10 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+/* ------------------------------------------------------------------------ */
+/* -------------- More Info Left-Section Styling Starts Here -------------- */
+/* ------------------------------------------------------------------------ */
 
 .more-info-section .left-section {
     height: 500px;
@@ -278,6 +311,15 @@ body {
     font-weight: 700;
 }
 
+/* ---------------------------------------------------------------------- */
+/* -------------- More Info Left-Section Styling Ends Here -------------- */
+/* ---------------------------------------------------------------------- */
+
+
+/* ------------------------------------------------------------------------- */
+/* -------------- More Info Right-Section Styling Starts Here -------------- */
+/* ------------------------------------------------------------------------- */
+
 .more-info-section .right-section {
     height: 500px;
     width: 50vw;
@@ -319,6 +361,107 @@ body {
     background-color: #0af02c;
 }
 
+/* ----------------------------------------------------------------------- */
+/* -------------- More Info Right-Section Styling Ends Here -------------- */
+/* ----------------------------------------------------------------------- */
+
+/* ----------------------------------------------------------------- */
+/* -------------- More Info Section Styling Ends Here -------------- */
+/* ----------------------------------------------------------------- */
+
+
+/* ------------------------------------------------------------------ */
+/* -------------- About Us Section Styling Starts Here -------------- */
+/* ------------------------------------------------------------------ */
+
+.about-us-section {
+    width: 100%;
+    height: auto;
+    background-color: #e80e6d;
+}
+
+.about-us-section > h1 {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 5rem;
+}
+.about-us-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 400px;
+    width: 100%;
+    background-color: #08e393;
+}
+
+.company-logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    height: 400px;
+    background-color: blueviolet;
+}
+
+.company-logo img {
+    height: auto;
+    max-width: 100%;
+}
+
+.team-members {
+    width: 50vw;
+    height: 400px;
+    background-color: #e2a82b;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+}
+
+.team-members > h1 {
+    text-align: center;
+    font-size: 5rem;
+
+}
+
+.team-member-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 0 10px 10px;
+}
+
+.team-member-list h1 {
+    margin: 10px 0 10px 0;
+}
+
+.team-member-list p {
+    margin: 0 0 0 10px;
+}
+
+.team-member-header {
+    width: 100%;
+    justify-self: flex-start;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.team-member-header h1 {
+    text-align: center;
+    font-size: 5rem;
+}
+
+
+
+
+/* ---------------------------------------------------------------- */
+/* -------------- About Us Section Styling Ends Here -------------- */
+/* ---------------------------------------------------------------- */
+
+
+/* --------------------------------------------------------------- */
+/* -------------- Media Queries Section Starts Here -------------- */
+/* --------------------------------------------------------------- */
 
 @media screen and (max-width: 1135px) {
     .more-info-section .left-section h1 {
@@ -422,7 +565,6 @@ body {
     }
 }
 
-
 @media screen and (max-width: 596px) {
     .nav-bar-container .nav-menu-items nav li {
         font-size: 1.3rem; 
@@ -519,4 +661,7 @@ body {
     }
 }
 
+/* ------------------------------------------------------------- */
+/* -------------- Media Queries Section Ends Here -------------- */
+/* ------------------------------------------------------------- */
 
