--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,8 @@ body {
 .banner-section {
     height: auto;
     width: 100%;
-    background-color: #F4CE6A;
+    background-color: #6af4ac;
+    /* background-color: #F4CE6A; */
     /* background-color: #d0e81a; */
     padding: 10px 0 0 0;
     display: flex;
@@ -154,6 +155,7 @@ body {
 .more-info-section {
     height: 500px;
     width: 100%;
+    background-color: #6af4ac;
     /* background-color: #e81a69; */
     display: flex;
     flex-direction: row;
@@ -170,26 +172,35 @@ body {
     width: 50vw;
     /* background-color: #CAD5E2; */
     /* background-color: #ae1ae8; */
-    background-color: #242B2E;
+    /* background-color: #6af4ac; */
+    /* background-color: #242B2E; */
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    padding: 10px 0 0 0;
-    border-right: 2px solid #ffffff;
+    /* padding: 10px 0 0 0; */
+    border-right: 4px solid #000000;
+    /* border-right: 2px solid #ffffff; */
 }
 
 .more-info-section .left-section h1 {
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    font-size: 4rem;
+    font-size: 30px;
     font-weight: 500;
     color: #DDD101;
 }
 
+.more-info-section .left-section .left-section-header {
+    width: 100%;
+    background-color: #000000;
+    color: #ffffff;
+    border-right: none;
+}
+
 .car-details {
     margin: 28px 0 0 0;
-    border: 3px solid #ffffff;
+    border: 3px solid #000000;
     padding: 30px;
 }
 
@@ -269,9 +280,10 @@ body {
 .car-details label {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 700;
     /* color: #E03B8B; */
-    color: #0af02c;
+    /* color: #0af02c; */
+    color: #000000;
 }
 
 .car-details select,input {
@@ -298,7 +310,7 @@ body {
 .search-button button {
     padding: 5px 12px;
     font-size: 18px;
-    border: 4px solid #20b2aa;
+    border: 3px solid #000000;
     border-radius: 5px;
     text-align: center;
     font-weight: 900;
@@ -308,6 +320,7 @@ body {
     cursor: pointer;
     background-color: #000000;
     color: #ffffff;
+    border: 3px solid #DDD12C;
     font-weight: 700;
 }
 
@@ -324,21 +337,27 @@ body {
     height: 500px;
     width: 50vw;
     /* background-color: #1ae8b8; */
-    background-color: #242B2E;
+    /* background-color: #242B2E; */
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    padding: 10px 0 0 0;
+    /* padding: 10px 0 0 0; */
     
 }
 
 .more-info-section .right-section h1 {
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    font-size: 4rem;
+    font-size: 30px;
     font-weight: 500;
     color: #DDD101;
+}
+
+.more-info-section .right-section .right-section-header {
+    width: 100%;
+    background-color: #000000;
+    color: #ffffff;
 }
 
 .popular-destinations{
@@ -377,21 +396,27 @@ body {
 .about-us-section {
     width: 100%;
     height: auto;
-    background-color: #e80e6d;
+    background-color: #6BF4AC;
 }
 
-.about-us-section > h1 {
+.about-us-header {
+    width: 100%;
+    background-color: #000000;
+    color: #DDD101;
+    font-family: 'Poppins',sans-serif;
+}
+
+.about-us-header h1 {
     text-align: center;
-    margin-top: 10px;
     font-size: 5rem;
 }
 .about-us-container {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 400px;
+    height: auto;
     width: 100%;
-    background-color: #08e393;
+    /* background-color: #08e393; */
 }
 
 .company-logo {
@@ -400,19 +425,28 @@ body {
     align-items: center;
     justify-content: center;
     width: 50vw;
-    height: 400px;
-    background-color: blueviolet;
+    height: 430px;
+    background-color: #6BF4AC;
+    /* background-color: #242B2E; */
+    padding: 10px 0;
 }
 
 .company-logo img {
     height: auto;
     max-width: 100%;
+    /* margin: 10px 0 10px 0; */
+    width: 50%;
+    clip-path: circle(50% at 50% 50%);
+    border: 4px solid #000000;
+    border-radius: 500px;
 }
 
 .team-members {
     width: 50vw;
-    height: 400px;
-    background-color: #e2a82b;
+    height: 500px;
+    /* height: auto; */
+    background-color: #6BF4AC;
+    border-left: 4px solid #000000;
     /* display: flex;
     flex-direction: column;
     justify-content: center; */
@@ -432,23 +466,33 @@ body {
 }
 
 .team-member-list h1 {
-    margin: 10px 0 10px 0;
+    margin: 31px 0 14px 15px;
+    font-size: 40px;
+    color: #0011ff;
+    font-family: 'Robboto',sans-serif;
 }
 
 .team-member-list p {
-    margin: 0 0 0 10px;
+    margin: 0 25px 0 52px;
+    font-size: 12px;
 }
 
 .team-member-header {
     width: 100%;
     justify-self: flex-start;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #DDD101;
+    /* padding-top: 10px; */
+    color: #000000;
 }
 
 .team-member-header h1 {
     text-align: center;
-    font-size: 5rem;
+    font-size: 50px;
+    border-bottom: 4px solid #000000;
+}
+
+.team-member-3 {
+    margin-bottom: 10px;
 }
 
 
@@ -467,10 +511,9 @@ body {
     .more-info-section .left-section h1 {
         margin: 0 10px;
         padding: 0 8px;
-        background-color: #1adc12;
-        color: #fc0000;
-        font-size: 3.5rem;
-        font-weight: 700;
+        /* background-color: #1adc12; */
+        /* color: #fc0000; */
+        /* font-weight: 700; */
     }
 
     .nav-bar-container {
@@ -509,12 +552,12 @@ body {
     }
 
     .more-info-section .left-section h1 {
-        font-size: 3.2rem;
+        /* font-size: 3.2rem; */
         margin: 0 10px;
         padding: 0 5px;
-        background-color: #1adc12;
-        color: #fc0000;
-        font-weight: 700;
+        /* background-color: #1adc12; */
+        /* color: #fc0000; */
+        /* font-weight: 700; */
     }
 
     .more-info-section .car-details {
@@ -525,6 +568,23 @@ body {
         height: auto;
         width: 100%;
         padding-bottom: 20px;
+    }
+
+    .about-us-container {
+        flex-direction: column;
+    }
+
+    .company-logo {
+        align-items: flex-start;
+    }
+    .company-logo img {
+        width: 80%;
+    }
+
+    .team-members {
+        width: 100%;
+        border: none;
+        margin-top: -60px;
     }
 }
 
@@ -653,7 +713,7 @@ body {
 
     .more-info-section .right-section h1 {
         font-size: 18px;
-        text-decoration: underline red;
+        /* text-decoration: underline red; */
     }
 
     .more-info-section .right-section .popular-destinations span {
