--- a/css/style.css
+++ b/css/style.css
@@ -496,10 +496,50 @@ body {
 }
 
 
+/* ---------------------------------------------------------------- */
+/* -------------- About Us Section Styling Ends Here -------------- */
+/* ---------------------------------------------------------------- */
+
 
 
 /* ---------------------------------------------------------------- */
-/* -------------- About Us Section Styling Ends Here -------------- */
+/* -------------- Footer Section Styling Starts Here -------------- */
+/* ---------------------------------------------------------------- */
+
+.footer-section {
+    width: 100%;
+    height: 40px;
+    background-color: #000000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-section .footer-copyright {
+    margin: 0 0 0 10px;
+}
+
+.footer-section .footer-copyright h1 {
+    color: #ffffff;
+}
+
+.footer-contents {
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-contents li {
+    color: #ffffff;
+    list-style-type: none;
+    margin-right: 30px;
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+}
+
+/* ---------------------------------------------------------------- */
+/* -------------- Footer Section Styling Starts Here -------------- */
 /* ---------------------------------------------------------------- */
 
 
