modified footer section styling

--- a/css/style.css
+++ b/css/style.css
@@ -538,6 +538,11 @@ body {
     font-weight: 700;
 }
 
+.footer-contents li a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
 /* ---------------------------------------------------------------- */
 /* -------------- Footer Section Styling Starts Here -------------- */
 /* ---------------------------------------------------------------- */
